# Django-Assginment

chapter_01/: .gitignore  db.sqlite3  pyproject.toml
chapter_01/.secret_config/: secret.json
chapter_01/config/: settings.py  urls.py
chapter_01/templates/registration/: base.html  login.html  signup.html
chapter_01/templates/todo/: pagination.html  todo_info.html  todo_list.html
chapter_01/todo/: admin.py  cd_views.py  forms.py  models.py  urls.py  views.py
chapter_01/todo/migrations/: 0001_initial.py  0002_initial.py  0002_todo_user.py  0003_alter_todo_user.py  0004_comment.py  0005_todo_completed_image_todo_thumbnail.py
chapter_01/todo/templates/: todo_list.html
chapter_01/users/: cd_views.py  forms.py  models.py  urls.py
chapter_01/users/migrations/: 0001_initial.py
chapter_01/utils/: email.py
chapter_02/todo/templates/: todo_list.html
lecture/oz/bookmark/: .gitignore
lecture/oz/bookmark/templates/: bookmark_detail.html
